# SwiftBrief

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/routers/: ocr.py
backend/app/services/: llm_service.py  ocr_service.py
frontend/: package-lock.json  package.json
frontend/patches/: html2canvas+1.4.1.patch
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ClaimSection.tsx  CourtSelect.tsx  DisclaimerModal.tsx  FactsSection.tsx  ImageUpload.tsx  ModeTab.tsx  NotesSection.tsx  PartySection.tsx  PdfDownloadButton.tsx  PetitionForm.tsx  PetitionPreview.tsx
frontend/src/lib/: amount-to-chinese.ts  api.ts  court-utils.ts  courts.ts  date-utils.ts  patch-html2canvas.ts  schema.ts  validate-id.ts
frontend/src/types/: petition.ts
openspec/changes/archive/2026-02-13-promissory-note-petition-generator/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-13-split-panel-live-preview/: design.md  proposal.md  tasks.md
openspec/changes/enhance-interest-calculation-ux/: proposal.md  specs.md  tasks.md
openspec/changes/fix-pdf-layout-and-table/: design.md  proposal.md  tasks.md
openspec/changes/fix-vercel-pdf-download/: design.md  tasks.md
openspec/changes/refactor-note-details-ui/: design.md  proposal.md  tasks.md
openspec/specs/disclaimer-modal/: spec.md
openspec/specs/ocr-image-preview/: spec.md
openspec/specs/paddleocr-integration/: spec.md
openspec/specs/petition-form/: spec.md
openspec/specs/petition-pdf/: spec.md
openspec/specs/petition-preview/: spec.md
(+56 files in other folders)
